--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/hooks": "^8.1.0",
     "@tabler/icons-react": "^3.34.0",
     "googleapis": "^150.0.1",
+    "lowdb": "^7.0.1",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
